--- a/src/Styles/_addItem.css
+++ b/src/Styles/_addItem.css
@@ -16,16 +16,21 @@
 .addItemLi{
     list-style:none;
 }
+.addItem #ifItem01{
+    border:3px solid orange;
+}
+.addItem #ifItemOperator{
+    border:3px solid blue;
+    margin-left:6px;
+    margin-right:6px;
+}
 .addItem #ifItem02{
+    border:3px solid green;
     width: 20vmax;
     height: 1.25vmax;
     padding-left: 10px;
     border-radius: 5px;
     margin-top: 5px;
-}
-.addItem #ifItemOperator{
-    margin-left:6px;
-    margin-right:6px;
 }
 .addItem select{
     width: 20vmax;
