--- a/src/Styles/_addItem.css
+++ b/src/Styles/_addItem.css
@@ -34,13 +34,15 @@
     font-size: 1.25vmax;
     color:blue;
 }
-.addItem #ifItem02, .addItem #thenItem02{
+.addItem input[type='text']{
     border:3px solid green;
     width: 20vmax;
     height: 1.25vmax;
     padding-left: 10px;
     border-radius: 5px;
     margin-top: 5px;
+    position:relative;
+    top:2px;
 }
 .addItem select{
     width: 20vmax;
@@ -55,4 +57,7 @@
     margin-left: 5px;
     background: rgba(0, 149, 255, 0.15);
 	cursor: pointer;
+}
+.addAndContainer{
+    width:100%;
 }
