--- a/src/Styles/_listItems.css
+++ b/src/Styles/_listItems.css
@@ -18,7 +18,7 @@
 .listItem>div:nth-of-type(3){
     font-weight: bold;
 }
-.listItem .removeListItem-btn{
+.listItem .btn{
     cursor: pointer;
     user-select: none;
 }
